[gd_scene load_steps=30 format=3 uid="uid://3rbwyri5ri08"]

[ext_resource type="Script" path="res://Scripts/pause_menu.gd" id="1_vwd16"]
[ext_resource type="Texture2D" uid="uid://dyulioenpxa68" path="res://Assets/Pause button.png" id="2_n2cdv"]
[ext_resource type="FontFile" uid="uid://cc6oei8kggppy" path="res://Assets/JuliusSansOne-Regular.ttf" id="2_quptw"]
[ext_resource type="Texture2D" uid="uid://br0a56m3b1ss8" path="res://Assets/Resume button.png" id="3_hy5sn"]
[ext_resource type="Texture2D" uid="uid://csvvwa3bf0hoy" path="res://Assets/Quit button2.png" id="4_tn3ls"]
[ext_resource type="Texture2D" uid="uid://cink5bmjcqj8p" path="res://Assets/Movement_WASD.png" id="5_hmurv"]
[ext_resource type="Texture2D" uid="uid://dts0bfl214g6x" path="res://Assets/Rotate camera.png" id="7_0wadd"]
[ext_resource type="Texture2D" uid="uid://beb0giaj3hce2" path="res://Assets/Undo redo action.png" id="8_pwfmr"]
[ext_resource type="Texture2D" uid="uid://b2nls1wxhgnf0" path="res://Assets/Pause & unpause game_ “esc”.png" id="9_am17u"]
[ext_resource type="Texture2D" uid="uid://k8jhvu164xek" path="res://Assets/Fast mode.png" id="10_d01kx"]
[ext_resource type="Texture2D" uid="uid://dp6dtdgi2ksxk" path="res://Assets/Music.png" id="11_c1bpb"]
[ext_resource type="Texture2D" uid="uid://do7k4scqsits0" path="res://Assets/Sounds.png" id="12_en70w"]
[ext_resource type="Texture2D" uid="uid://cvf4pam3m78cl" path="res://Assets/Toggle frame 1.png" id="13_lc8dp"]
[ext_resource type="Texture2D" uid="uid://bg28bnf0m5qo3" path="res://Assets/Toggle frame 2.png" id="14_1nwty"]
[ext_resource type="Texture2D" uid="uid://dj027erw072e8" path="res://Assets/Toggle frame 3.png" id="15_jq2f6"]
[ext_resource type="Texture2D" uid="uid://cl5dg01lipnd3" path="res://Assets/Toggle frame 4.png" id="16_33any"]
[ext_resource type="Texture2D" uid="uid://cq4wr8wjnjggd" path="res://Assets/Toggle frame 5.png" id="17_xfy2b"]
[ext_resource type="Texture2D" uid="uid://qmmdsrnj0qqy" path="res://Assets/Toggle frame 6.png" id="18_l7vp5"]
[ext_resource type="Texture2D" uid="uid://d31gfkbr0xjpi" path="res://Assets/Toggle frame 7.png" id="19_h8tja"]
[ext_resource type="Texture2D" uid="uid://cnd1456jligw4" path="res://Assets/Toggle frame 8.png" id="20_140if"]
[ext_resource type="Texture2D" uid="uid://rerphcqprglc" path="res://Assets/Toggle frame 9.png" id="21_pidh1"]
[ext_resource type="Texture2D" uid="uid://cr8swxc48shre" path="res://Assets/Toggle frame 10.png" id="22_oq7y2"]
[ext_resource type="Texture2D" uid="uid://4fq42ek4n2bu" path="res://Assets/Toggle frame 11.png" id="23_cw7jr"]
[ext_resource type="Texture2D" uid="uid://cy6iun00wlmux" path="res://Assets/Toggle frame 12.png" id="24_fia6e"]
[ext_resource type="Texture2D" uid="uid://b8r01lvupvdxj" path="res://Assets/Undo button.png" id="25_4j4iq"]
[ext_resource type="Texture2D" uid="uid://jd1rklu2qk2p" path="res://Assets/Redo button.png" id="26_yvfqw"]
[ext_resource type="Texture2D" uid="uid://dkyrcv5ncsbt0" path="res://Assets/Restart button.png" id="27_hw1e3"]

[sub_resource type="LabelSettings" id="LabelSettings_ceda8"]
font = ExtResource("2_quptw")
font_size = 40
font_color = Color(0, 0, 0, 1)

[sub_resource type="SpriteFrames" id="SpriteFrames_xten7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("13_lc8dp")
}, {
"duration": 1.0,
"texture": ExtResource("14_1nwty")
}, {
"duration": 1.0,
"texture": ExtResource("15_jq2f6")
}, {
"duration": 1.0,
"texture": ExtResource("16_33any")
}, {
"duration": 1.0,
"texture": ExtResource("17_xfy2b")
}, {
"duration": 1.0,
"texture": ExtResource("18_l7vp5")
}, {
"duration": 1.0,
"texture": ExtResource("19_h8tja")
}, {
"duration": 1.0,
"texture": ExtResource("20_140if")
}, {
"duration": 1.0,
"texture": ExtResource("21_pidh1")
}, {
"duration": 1.0,
"texture": ExtResource("22_oq7y2")
}, {
"duration": 1.0,
"texture": ExtResource("23_cw7jr")
}, {
"duration": 1.0,
"texture": ExtResource("24_fia6e")
}],
"loop": false,
"name": &"default",
"speed": 45.0
}]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vwd16")

[node name="Pause_screen_ui" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ColorRect" type="ColorRect" parent="Pause_screen_ui"]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
color = Color(1, 1, 1, 0.6)

[node name="Label" type="Label" parent="Pause_screen_ui"]
layout_mode = 0
offset_left = 504.0
offset_top = 24.0
offset_right = 648.0
offset_bottom = 69.0
text = "Paused"
label_settings = SubResource("LabelSettings_ceda8")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Resume" type="Button" parent="Pause_screen_ui"]
layout_mode = 0
offset_left = 488.0
offset_top = 542.0
offset_right = 1748.0
offset_bottom = 858.0
scale = Vector2(0.14, 0.14)
icon = ExtResource("3_hy5sn")
flat = true

[node name="Quit" type="Button" parent="Pause_screen_ui"]
layout_mode = 0
offset_left = 522.5
offset_top = 592.0
offset_right = 1418.5
offset_bottom = 908.0
scale = Vector2(0.12, 0.12)
icon = ExtResource("4_tn3ls")
flat = true

[node name="Fast_mode_button" type="CheckButton" parent="Pause_screen_ui"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 642.0
offset_top = 330.5
offset_right = 692.0
offset_bottom = 355.5

[node name="Toggle" type="AnimatedSprite2D" parent="Pause_screen_ui/Fast_mode_button"]
position = Vector2(25, 12.5)
scale = Vector2(0.13, 0.13)
sprite_frames = SubResource("SpriteFrames_xten7")
frame = 11
frame_progress = 1.0

[node name="Music_button" type="CheckButton" parent="Pause_screen_ui"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 642.0
offset_top = 364.5
offset_right = 692.0
offset_bottom = 389.5

[node name="Toggle2" type="AnimatedSprite2D" parent="Pause_screen_ui/Music_button"]
position = Vector2(25, 12.5)
scale = Vector2(0.13, 0.13)
sprite_frames = SubResource("SpriteFrames_xten7")

[node name="Sounds_button" type="CheckButton" parent="Pause_screen_ui"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 642.0
offset_top = 398.5
offset_right = 692.0
offset_bottom = 423.5

[node name="Toggle3" type="AnimatedSprite2D" parent="Pause_screen_ui/Sounds_button"]
position = Vector2(25, 12.5)
scale = Vector2(0.13, 0.13)
sprite_frames = SubResource("SpriteFrames_xten7")

[node name="Text" type="Node2D" parent="Pause_screen_ui"]

[node name="Movement" type="Sprite2D" parent="Pause_screen_ui/Text"]
position = Vector2(576, 207)
scale = Vector2(0.13, 0.13)
texture = ExtResource("5_hmurv")

[node name="Camera_rotate" type="Sprite2D" parent="Pause_screen_ui/Text"]
position = Vector2(624, 241)
scale = Vector2(0.325, 0.325)
texture = ExtResource("7_0wadd")

[node name="Undo_redo" type="Sprite2D" parent="Pause_screen_ui/Text"]
position = Vector2(576.5, 275)
scale = Vector2(0.325, 0.325)
texture = ExtResource("8_pwfmr")

[node name="Pause_unpause" type="Sprite2D" parent="Pause_screen_ui/Text"]
position = Vector2(572, 309)
scale = Vector2(0.325, 0.325)
texture = ExtResource("9_am17u")

[node name="Fast_mode" type="Sprite2D" parent="Pause_screen_ui/Text"]
position = Vector2(542.5, 343)
scale = Vector2(0.325, 0.325)
texture = ExtResource("10_d01kx")

[node name="Music" type="Sprite2D" parent="Pause_screen_ui/Text"]
position = Vector2(509, 377)
scale = Vector2(0.325, 0.325)
texture = ExtResource("11_c1bpb")

[node name="Sounds" type="Sprite2D" parent="Pause_screen_ui/Text"]
position = Vector2(523.5, 411)
scale = Vector2(0.325, 0.325)
texture = ExtResource("12_en70w")

[node name="Pause" type="Button" parent="."]
layout_mode = 0
offset_left = 516.8
offset_top = 543.0
offset_right = 1700.8
offset_bottom = 959.0
scale = Vector2(0.1, 0.1)
icon = ExtResource("2_n2cdv")
flat = true

[node name="Undo" type="Button" parent="."]
layout_mode = 0
offset_left = 456.0
offset_top = 586.0
offset_right = 1016.0
offset_bottom = 1146.0
scale = Vector2(0.1, 0.1)
icon = ExtResource("25_4j4iq")
flat = true

[node name="Redo" type="Button" parent="."]
layout_mode = 0
offset_left = 640.0
offset_top = 586.0
offset_right = 1200.0
offset_bottom = 1146.0
scale = Vector2(0.1, 0.1)
icon = ExtResource("26_yvfqw")
flat = true

[node name="Restart" type="Button" parent="."]
layout_mode = 0
offset_left = 548.0
offset_top = 586.0
offset_right = 1108.0
offset_bottom = 1146.0
scale = Vector2(0.1, 0.1)
icon = ExtResource("27_hw1e3")
flat = true

[node name="Fade_timer" type="Timer" parent="."]

[node name="Fade" type="ColorRect" parent="."]
modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0

[connection signal="button_up" from="Pause_screen_ui/Resume" to="." method="_resume_button_pressed"]
[connection signal="mouse_entered" from="Pause_screen_ui/Resume" to="." method="_resume_mouse_entered"]
[connection signal="mouse_exited" from="Pause_screen_ui/Resume" to="." method="_resume_mouse_exited"]
[connection signal="button_up" from="Pause_screen_ui/Quit" to="." method="_quit_button_pressed"]
[connection signal="mouse_entered" from="Pause_screen_ui/Quit" to="." method="_quit_mouse_entered"]
[connection signal="mouse_exited" from="Pause_screen_ui/Quit" to="." method="_quit_mouse_exited"]
[connection signal="button_up" from="Pause_screen_ui/Fast_mode_button" to="." method="_fast_mode_pressed"]
[connection signal="mouse_entered" from="Pause_screen_ui/Fast_mode_button" to="." method="_fast_mode_mouse_entered"]
[connection signal="mouse_exited" from="Pause_screen_ui/Fast_mode_button" to="." method="_fast_mode_mouse_exited"]
[connection signal="button_up" from="Pause_screen_ui/Music_button" to="." method="_music_pressed"]
[connection signal="mouse_entered" from="Pause_screen_ui/Music_button" to="." method="_music_mouse_entered"]
[connection signal="mouse_exited" from="Pause_screen_ui/Music_button" to="." method="_music_mouse_exited"]
[connection signal="button_up" from="Pause_screen_ui/Sounds_button" to="." method="_sounds_pressed"]
[connection signal="mouse_entered" from="Pause_screen_ui/Sounds_button" to="." method="_sounds_mouse_entered"]
[connection signal="mouse_exited" from="Pause_screen_ui/Sounds_button" to="." method="_sounds_mouse_exited"]
[connection signal="button_up" from="Pause" to="." method="_pause_button_pressed"]
[connection signal="mouse_entered" from="Pause" to="." method="_pause_mouse_entered"]
[connection signal="mouse_exited" from="Pause" to="." method="_pause_mouse_exited"]
[connection signal="button_up" from="Undo" to="." method="_undo_button_pressed"]
[connection signal="mouse_entered" from="Undo" to="." method="_undo_mouse_entered"]
[connection signal="mouse_exited" from="Undo" to="." method="_undo_mouse_exited"]
[connection signal="button_up" from="Redo" to="." method="_redo_button_pressed"]
[connection signal="mouse_entered" from="Redo" to="." method="_redo_mouse_entered"]
[connection signal="mouse_exited" from="Redo" to="." method="_redo_mouse_exited"]
[connection signal="button_up" from="Restart" to="." method="_restart_button_pressed"]
[connection signal="mouse_entered" from="Restart" to="." method="_restart_mouse_entered"]
[connection signal="mouse_exited" from="Restart" to="." method="_restart_mouse_exited"]
[connection signal="timeout" from="Fade_timer" to="." method="_fade_timer_done"]
